<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="3.14" />

    <Button
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/funcAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/number4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <Button
        android:id="@+id/number5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number4"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <Button
        android:id="@+id/number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number5"
        app:layout_constraintTop_toBottomOf="@+id/number3" />

    <Button
        android:id="@+id/funcSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number6"
        app:layout_constraintTop_toBottomOf="@+id/funcAdd" />

    <Button
        android:id="@+id/number7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/number4" />

    <Button
        android:id="@+id/number8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number7"
        app:layout_constraintTop_toBottomOf="@+id/number5" />

    <Button
        android:id="@+id/number9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number8"
        app:layout_constraintTop_toBottomOf="@+id/number6" />

    <Button
        android:id="@+id/funcMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number9"
        app:layout_constraintTop_toBottomOf="@+id/funcSubtract" />

    <Button
        android:id="@+id/funcDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number9"
        app:layout_constraintTop_toBottomOf="@+id/funcMultiply" />

    <Button
        android:id="@+id/funcClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00b300"
        android:text="C"
        app:layout_constraintStart_toStartOf="@+id/funcDivide"
        app:layout_constraintTop_toBottomOf="@+id/funcDivide" />

    <Button
        android:id="@+id/funcEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#cc0000"
        android:text="="
        app:layout_constraintStart_toStartOf="@+id/funcClear"
        app:layout_constraintTop_toBottomOf="@+id/funcClear" />

    <Button
        android:id="@+id/number0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4da6ff"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/number8" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number7" />

    <Button
        android:id="@+id/dotButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ff9900"
        android:text="."
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/number0"
        app:layout_constraintTop_toBottomOf="@+id/number9" />

    <Button
        android:id="@+id/backspaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#df65f3"
        android:text="bs"
        app:layout_constraintStart_toStartOf="@+id/funcEquals"
        app:layout_constraintTop_toBottomOf="@+id/funcEquals" />

</androidx.constraintlayout.widget.ConstraintLayout>